New API endpoints for GET rental by id. And added them in api-docs.
